<resources>
    <string name="app_name">E_Home</string>
    <string name="registrar">Registrar</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="registrarse">Registrarse</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="dormitorio">Dormitorio</string>
    <string name="cocina">Cocina</string>
    <string name="sala">Sala</string>
    <string name="ba_o">Baño</string>
    <string name="patio">Patio</string>
    <string name="e_mail">E-mail</string>
    <string name="contrase_a">Contraseña</string>
    <string name="condirmar_contrase_a">Condirmar contraseña</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
</resources>