<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PowerActivity">

    <ScrollView
        android:layout_width="399dp"
        android:layout_height="729dp"
        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Switch
                android:id="@+id/switch1"
                android:layout_width="380dp"
                android:layout_height="40dp"
                android:text="@string/dormitorio"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <Switch
                android:id="@+id/switch2"
                android:layout_width="380dp"
                android:layout_height="40dp"
                android:text="@string/cocina"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <Switch
                android:id="@+id/switch3"
                android:layout_width="380dp"
                android:layout_height="40dp"
                android:text="@string/sala"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <Switch
                android:id="@+id/switch4"
                android:layout_width="380dp"
                android:layout_height="40dp"
                android:text="@string/ba_o"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <Switch
                android:id="@+id/switch5"
                android:layout_width="380dp"
                android:layout_height="40dp"
                android:text="@string/patio"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>