<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

  <EditText
      android:id="@+id/editTextPersonName"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="124dp"
      android:layout_marginBottom="44dp"
      android:ems="10"
      android:hint="@string/usuario"
      android:importantForAutofill="no"
      android:inputType="textPersonName"
      android:text="@string/usuario"
      app:layout_constraintBottom_toTopOf="@+id/editTextEmailAddress"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/editTextEmailAddress"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="44dp"
      android:ems="10"
      android:hint="@string/e_mail"
      android:importantForAutofill="no"
      android:inputType="textEmailAddress"
      android:text="@string/e_mail"
      app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent" />

  <EditText
      android:id="@+id/editTextTextPassword"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="44dp"
      android:ems="10"
      android:hint="@string/contrase_a"
      android:importantForAutofill="no"
      android:inputType="textPassword"
      app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent" />

  <EditText
      android:id="@+id/editTextTextPassword2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="44dp"
      android:ems="10"
      android:hint="@string/confirmar_contrase_a"
      android:importantForAutofill="no"
      android:inputType="textPassword"
      app:layout_constraintBottom_toTopOf="@+id/button3"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/button3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="192dp"
      android:onClick="registrar"
      android:text="@string/registrarse"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>